--- a/microML.cabal
+++ b/microML.cabal
@@ -10,7 +10,17 @@ Category:       Compiler
 Build-type:     Simple
 Cabal-version:  >=1.6
 
-Executable microML
+test-suite microMLTest
+  hs-source-dirs:    tests, src
+  main-is:           Main.hs
+  type:              exitcode-stdio-1.0
+  ghc-options:       -Wall -threaded
+  build-depends:     base,
+                     hspec,
+                     hspec-expectations,
+                     hspec-megaparsec
+
+executable microML
   hs-source-dirs:    src
   Main-is:           Main.hs
   
@@ -22,8 +32,6 @@ Executable microML
                      scientific,
                      containers,
                      transformers,
-                     hspec-expectations,
-                     hspec-megaparsec,
                      c-dsl >= 0.3.1
 
   ghc-options:   -Wall -O2 -fwarn-tabs -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-binds
