--- a/microML.cabal
+++ b/microML.cabal
@@ -30,6 +30,7 @@ executable microML
                      repline >= 0.1.5.0,
                      mtl,
                      text,
+                     pretty,
                      scientific,
                      containers,
                      transformers,
