--- a/microML.cabal
+++ b/microML.cabal
@@ -29,11 +29,12 @@ executable microML
                      parsec,
                      repline >= 0.1.5.0,
                      process,
+                     random,
                      directory,
                      mtl,
                      text,
                      pretty,
-                     scientific,
+                     --scientific,
                      containers,
                      transformers,
                      llvm-general,
