--- a/microML.cabal
+++ b/microML.cabal
@@ -28,13 +28,14 @@ executable microML
   Build-depends:     base >= 3,
                      parsec,
                      repline >= 0.1.5.0,
+                     cmdargs,
                      process,
                      random,
                      directory,
                      mtl,
                      text,
                      pretty,
-                     scientific,
+                     -- scientific,
                      containers,
                      transformers,
                      llvm-general,
