--- a/stack.yaml
+++ b/stack.yaml
@@ -24,6 +24,8 @@ extra-deps:
 - quickcheck-io-0.1.3
 - repline-0.1.5.0
 - setenv-0.1.1.3
+- pretty-tree-0.1.0.0
+- boxes-0.1.4
 
 # Override default flag values for local packages and extra-deps
 flags: {}
