--- a/stack.yaml
+++ b/stack.yaml
@@ -5,7 +5,9 @@ extra-package-dbs: []
 packages:
 - '.'
 extra-deps:
+- ConfigFile-1.1.4
 - HUnit-1.3.1.1
+- MissingH-1.4.0.1
 - MonadRandom-0.4.2.3
 - QuickCheck-2.9.1
 - StateVar-1.1.0.4
@@ -22,6 +24,7 @@ extra-deps:
 - exceptions-0.8.3
 - free-4.12.4
 - hashable-1.2.4.0
+- hslogger-1.2.10
 - hspec-2.2.3
 - hspec-core-2.2.3
 - hspec-discover-2.2.3
@@ -29,6 +32,9 @@ extra-deps:
 - mmorph-1.0.6
 - monad-control-1.0.1.0
 - mtl-2.2.1
+- network-2.6.3.1
+- old-locale-1.0.0.7
+- old-time-1.1.0.3
 - parsec-3.1.11
 - prelude-extras-0.4.0.3
 - pretty-tree-0.1.0.0
@@ -36,6 +42,9 @@ extra-deps:
 - profunctors-5.2
 - quickcheck-io-0.1.3
 - random-1.1
+- regex-base-0.93.2
+- regex-compat-0.95.1
+- regex-posix-0.95.2
 - repline-0.1.5.0
 - semigroupoids-5.1
 - semigroups-0.18.2
